feat: activate user
