# cmd/api/users.go
@@ -155,18 +155,18 @@ func (app *application) unfollowUserHandler(w http.ResponseWriter, r *http.Reque
 
 // ActivateUser godoc
 //
-// @Summary Activates/Register a user
-// @Description Activates/Register a user by invitation token
-// @Tags users
-// @Produce json
-// @Param token path string true "Invitation token"
-// @Success 204 {string} string "user activated"
-// @Failure 404 {object} error
+//	@Summary		Activates/Register a user
+//	@Description	Activates/Register a user by invitation token
+//	@Tags			users
+//	@Produce		json
+//	@Param			token	path		string	true	"Invitation token"
+//	@Success		204		{string}	string	"user activated"
+//	@Failure		404		{object}	error
 //
-//	@Failure 500 {object} error
+//	@Failure		500		{object}	error
 //
-// @Security ApiKeyAuth
-// @Router /users/acivate/{token} [put]
+//	@Security		ApiKeyAuth
+//	@Router			/users/activate/{token} [put]
 func (app *application) activateUserHandler(w http.ResponseWriter, r *http.Request) {
 	token := chi.URLParam(r, "token")
 
@@ -182,7 +182,6 @@ func (app *application) activateUserHandler(w http.ResponseWriter, r *http.Reque
 		return
 	}
 
-	if err := app.jsonResponse(w, http.StatusNoContent, ""); err != nil {
-		app.internalServerError(w, r, err)
-	}
+	w.WriteHeader(http.StatusNoContent)
+
 }
